# vectorization-demo

./: .gitignore  .gitmodules  CMakeLists.txt  DeviceBridge.py  README.md  build.py  run.py
include/: TimePerf.h  config.h.in  log.h  test.h
src/: main.cpp  test.cpp
